[metadata]
name = glue-single-cell
url = https://www.gluesolutions.io
author = glue solutions, inc.
author_email = jfoster@gluesolutions.io
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Visualization
    License :: OSI Approved :: BSD License
description = Menubar plugin for calculating differential gene expression in glue
version = 1.0

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    glue-core@git+https://github.com/gluesolutions/glue.git@add-direct-labels
    glue-small-multiples@git+https://github.com/gluesolutions/glue-small-multiples.git
    anndata
    scanpy
    enrichrpy
    
[options.entry_points]
glue.plugins =
    glue_single_cell = glue_single_cell:setup

[options.extras_require]
qt =
    PyQt5>=5.9
test =
    pytest

[options.package_data]
* = *.png, *.ui, *.glu, *.hdf5, *.fits, *.xlsx, *.txt, *.csv, *.svg, *.vot, *.bgz, *.tbi *.h5ad
